art-pi-smart-unet/userapps/compile_log
services/lwIPKit/drv_enet/driver/drv_eth.c: In function 'ueth_rx_interrupt_handle_entry':
services/lwIPKit/drv_enet/driver/drv_eth.c:563:41: error: implicit declaration of function 'lwp_shminfo'; did you mean 'lwp_shmdt'? [-Werror=implicit-function-declaration]
             cmd = (struct channel_cmd *)lwp_shminfo(shmid);
                                         ^~~~~~~~~~~
                                         lwp_shmdt
services/lwIPKit/drv_enet/driver/drv_eth.c: At top level:
services/lwIPKit/drv_enet/driver/drv_eth.c:639:17: error: static declaration of 'eth_device_init' follows non-static declaration
 static rt_err_t eth_device_init(struct eth_device *eth, const char *name)
                 ^~~~~~~~~~~~~~~
In file included from services/lwIPKit/drv_enet/driver/drv_eth.h:22:0,
                 from services/lwIPKit/drv_enet/driver/drv_eth.c:13:
sdk/rt-thread/components/net/unet_eth.h:49:14: note: previous declaration of 'eth_device_init' was here
     rt_err_t eth_device_init(struct eth_device * dev, const char *name);
              ^~~~~~~~~~~~~~~
services/lwIPKit/drv_enet/driver/drv_eth.c: In function 'imx6ul_eth_init':
services/lwIPKit/drv_enet/driver/drv_eth.c:670:51: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
         _imx6ul_eth_device[idx].parent.eth_rx     = rt_imx6ul_eth_rx;
                                                   ^
services/lwIPKit/drv_enet/driver/drv_eth.c:671:51: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
         _imx6ul_eth_device[idx].parent.eth_tx     = rt_imx6ul_eth_tx;
                                                   ^
services/lwIPKit/drv_enet/driver/drv_eth.c:728:19: error: assignment discards 'const' qualifier from pointer target type [-Werror=discarded-qualifiers]
         *eth_name = _imx6ul_eth_device[eth_select].mac_name;
                   ^
cc1: all warnings being treated as errors
scons: *** [build/lwIPKit/drv_enet/driver/drv_eth.o] Error 1
